--- a/src/style.scss
+++ b/src/style.scss
@@ -73,10 +73,11 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
+  height: calc(100vh - 4rem);
 }
 
 @media (prefers-color-scheme: light) {
